kustomize/counter/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter
  labels:
    app: counter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter
  template:
    metadata:
      labels:
        app: counter
    spec:
      containers:
      - name: counter
        image: counter # kustomize thing
        ports:
        - name: http
          containerPort: 5000
          protocol: TCP
        livenessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 10
          periodSeconds: 15
        resources:
          requests:
            memory: 200Mi
            cpu: 100m
          limits:
            memory: 200Mi
            cpu: 100m
