kustomize/counter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter
spec:
  selector:
    app: counter
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
