kustomize/counter/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counter
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - counter.djnd.si
      secretName: counter-tls
  rules:
    - host: counter.djnd.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: counter
                port:
                  number: 80
